# data-prep-tools

./: .gitignore  Dockerfile  README.md  data_preparer.sh  todo.txt
bash/: README.md
bash/car-then-split/: Dockerfile  README.md  car-then-split.sh
bash/dataprep_tools/: car_splitters.sh  commp_calculators.sh
bash/split-then-car/: Dockerfile  README.md  split-then-car.sh  splitter.sh
bash/utils/: car_generators.sh  car_utils.sh  deal_param_utils.sh  file_utils.sh  splitter.sh
docs/: README.md  car-first-then-split.md  car-generators.md  car-splitters-joiners.md  commp-calculators.md  payload-piece-cid.md
docs/best-practices/: car-first-then-split.md  data-preparation-and-retrieval.md
docs/tools/: car-generators.md  car-splitters-joiners.md
modules/: README.md
modules/dataprep_tools-py/: pyproject.toml
modules/dataprep_tools-py/src/dataprep_tools/: car_generators.py  car_splitters.py  commp_calculators.py  end_to_end.py
modules/dataprep_tools-py/src/dataprep_tools/utils/: car_then_split.py
orchestrators/: README.md
performance/: README.md
performance/benchmarks/: car-and-commp.md  car-generation.md
performance/scripts/: delta-prep.sh  generate-car-prep.sh  generate_data.sh  go-car-prep.sh  ipfs-car-prep.sh  run_load_test.sh  stream-dagger-prep.sh  test_car_and_commp.sh  test_tool.sh
python/car-then-split/: car_generators.py  (+4 more)
utils/: .car_generators.sh.swp.car  .file_utils.sh.swp.car  .splitter.sh.swp.car  car_generators.sh  car_generators.sh.car  deal_param_utils.sh  file_utils.sh  file_utils.sh.car  splitter.sh  splitter.sh.car
(+14 files in other folders)
