[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataprep_tools"
version = "0.0.11"
authors = [
    {name="Anjor"}
]
description = "Utils to prepare data for filecoin deals"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
